refactor: working on magin sign-in/up